// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Signin component should render banner text correctly with given strings 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Signin
    list={
      Array [
        "one",
        "two",
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form
        className="form-signin"
        onSubmit={[Function]}
      >
        <h2
          className="form-signin-heading"
        >
          Please login
        </h2>
        <input
          autoFocus=""
          className="form-control"
          name="email"
          onChange={[Function]}
          placeholder="Email Address"
          required=""
          type="text"
          value=""
        />
        <input
          className="form-control"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          required=""
          type="password"
          value=""
        />
        <button
          className="btn btn-lg btn-primary btn-block"
          type="submit"
        >
          Login
        </button>
      </form>,
      "className": "wrapper",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="form-signin-heading"
          >
            Please login
          </h2>,
          <input
            autoFocus=""
            className="form-control"
            name="email"
            onChange={[Function]}
            placeholder="Email Address"
            required=""
            type="text"
            value=""
          />,
          <input
            className="form-control"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required=""
            type="password"
            value=""
          />,
          <button
            className="btn btn-lg btn-primary btn-block"
            type="submit"
          >
            Login
          </button>,
        ],
        "className": "form-signin",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Please login",
            "className": "form-signin-heading",
          },
          "ref": null,
          "rendered": "Please login",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autoFocus": "",
            "className": "form-control",
            "name": "email",
            "onChange": [Function],
            "placeholder": "Email Address",
            "required": "",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "form-control",
            "name": "password",
            "onChange": [Function],
            "placeholder": "Password",
            "required": "",
            "type": "password",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Login",
            "className": "btn btn-lg btn-primary btn-block",
            "type": "submit",
          },
          "ref": null,
          "rendered": "Login",
          "type": "button",
        },
      ],
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form
          className="form-signin"
          onSubmit={[Function]}
        >
          <h2
            className="form-signin-heading"
          >
            Please login
          </h2>
          <input
            autoFocus=""
            className="form-control"
            name="email"
            onChange={[Function]}
            placeholder="Email Address"
            required=""
            type="text"
            value=""
          />
          <input
            className="form-control"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required=""
            type="password"
            value=""
          />
          <button
            className="btn btn-lg btn-primary btn-block"
            type="submit"
          >
            Login
          </button>
        </form>,
        "className": "wrapper",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="form-signin-heading"
            >
              Please login
            </h2>,
            <input
              autoFocus=""
              className="form-control"
              name="email"
              onChange={[Function]}
              placeholder="Email Address"
              required=""
              type="text"
              value=""
            />,
            <input
              className="form-control"
              name="password"
              onChange={[Function]}
              placeholder="Password"
              required=""
              type="password"
              value=""
            />,
            <button
              className="btn btn-lg btn-primary btn-block"
              type="submit"
            >
              Login
            </button>,
          ],
          "className": "form-signin",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Please login",
              "className": "form-signin-heading",
            },
            "ref": null,
            "rendered": "Please login",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autoFocus": "",
              "className": "form-control",
              "name": "email",
              "onChange": [Function],
              "placeholder": "Email Address",
              "required": "",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "form-control",
              "name": "password",
              "onChange": [Function],
              "placeholder": "Password",
              "required": "",
              "type": "password",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Login",
              "className": "btn btn-lg btn-primary btn-block",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Login",
            "type": "button",
          },
        ],
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing the Signin component should render correctly in "debug" mode 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Signin
    debug={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form
        className="form-signin"
        onSubmit={[Function]}
      >
        <h2
          className="form-signin-heading"
        >
          Please login
        </h2>
        <input
          autoFocus=""
          className="form-control"
          name="email"
          onChange={[Function]}
          placeholder="Email Address"
          required=""
          type="text"
          value=""
        />
        <input
          className="form-control"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          required=""
          type="password"
          value=""
        />
        <button
          className="btn btn-lg btn-primary btn-block"
          type="submit"
        >
          Login
        </button>
      </form>,
      "className": "wrapper",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="form-signin-heading"
          >
            Please login
          </h2>,
          <input
            autoFocus=""
            className="form-control"
            name="email"
            onChange={[Function]}
            placeholder="Email Address"
            required=""
            type="text"
            value=""
          />,
          <input
            className="form-control"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required=""
            type="password"
            value=""
          />,
          <button
            className="btn btn-lg btn-primary btn-block"
            type="submit"
          >
            Login
          </button>,
        ],
        "className": "form-signin",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Please login",
            "className": "form-signin-heading",
          },
          "ref": null,
          "rendered": "Please login",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autoFocus": "",
            "className": "form-control",
            "name": "email",
            "onChange": [Function],
            "placeholder": "Email Address",
            "required": "",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "form-control",
            "name": "password",
            "onChange": [Function],
            "placeholder": "Password",
            "required": "",
            "type": "password",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Login",
            "className": "btn btn-lg btn-primary btn-block",
            "type": "submit",
          },
          "ref": null,
          "rendered": "Login",
          "type": "button",
        },
      ],
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form
          className="form-signin"
          onSubmit={[Function]}
        >
          <h2
            className="form-signin-heading"
          >
            Please login
          </h2>
          <input
            autoFocus=""
            className="form-control"
            name="email"
            onChange={[Function]}
            placeholder="Email Address"
            required=""
            type="text"
            value=""
          />
          <input
            className="form-control"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required=""
            type="password"
            value=""
          />
          <button
            className="btn btn-lg btn-primary btn-block"
            type="submit"
          >
            Login
          </button>
        </form>,
        "className": "wrapper",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="form-signin-heading"
            >
              Please login
            </h2>,
            <input
              autoFocus=""
              className="form-control"
              name="email"
              onChange={[Function]}
              placeholder="Email Address"
              required=""
              type="text"
              value=""
            />,
            <input
              className="form-control"
              name="password"
              onChange={[Function]}
              placeholder="Password"
              required=""
              type="password"
              value=""
            />,
            <button
              className="btn btn-lg btn-primary btn-block"
              type="submit"
            >
              Login
            </button>,
          ],
          "className": "form-signin",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Please login",
              "className": "form-signin-heading",
            },
            "ref": null,
            "rendered": "Please login",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autoFocus": "",
              "className": "form-control",
              "name": "email",
              "onChange": [Function],
              "placeholder": "Email Address",
              "required": "",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "form-control",
              "name": "password",
              "onChange": [Function],
              "placeholder": "Password",
              "required": "",
              "type": "password",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Login",
              "className": "btn btn-lg btn-primary btn-block",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Login",
            "type": "button",
          },
        ],
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing the Signin component should render correctly with no props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Signin />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form
        className="form-signin"
        onSubmit={[Function]}
      >
        <h2
          className="form-signin-heading"
        >
          Please login
        </h2>
        <input
          autoFocus=""
          className="form-control"
          name="email"
          onChange={[Function]}
          placeholder="Email Address"
          required=""
          type="text"
          value=""
        />
        <input
          className="form-control"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          required=""
          type="password"
          value=""
        />
        <button
          className="btn btn-lg btn-primary btn-block"
          type="submit"
        >
          Login
        </button>
      </form>,
      "className": "wrapper",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="form-signin-heading"
          >
            Please login
          </h2>,
          <input
            autoFocus=""
            className="form-control"
            name="email"
            onChange={[Function]}
            placeholder="Email Address"
            required=""
            type="text"
            value=""
          />,
          <input
            className="form-control"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required=""
            type="password"
            value=""
          />,
          <button
            className="btn btn-lg btn-primary btn-block"
            type="submit"
          >
            Login
          </button>,
        ],
        "className": "form-signin",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Please login",
            "className": "form-signin-heading",
          },
          "ref": null,
          "rendered": "Please login",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autoFocus": "",
            "className": "form-control",
            "name": "email",
            "onChange": [Function],
            "placeholder": "Email Address",
            "required": "",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "form-control",
            "name": "password",
            "onChange": [Function],
            "placeholder": "Password",
            "required": "",
            "type": "password",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Login",
            "className": "btn btn-lg btn-primary btn-block",
            "type": "submit",
          },
          "ref": null,
          "rendered": "Login",
          "type": "button",
        },
      ],
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form
          className="form-signin"
          onSubmit={[Function]}
        >
          <h2
            className="form-signin-heading"
          >
            Please login
          </h2>
          <input
            autoFocus=""
            className="form-control"
            name="email"
            onChange={[Function]}
            placeholder="Email Address"
            required=""
            type="text"
            value=""
          />
          <input
            className="form-control"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required=""
            type="password"
            value=""
          />
          <button
            className="btn btn-lg btn-primary btn-block"
            type="submit"
          >
            Login
          </button>
        </form>,
        "className": "wrapper",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="form-signin-heading"
            >
              Please login
            </h2>,
            <input
              autoFocus=""
              className="form-control"
              name="email"
              onChange={[Function]}
              placeholder="Email Address"
              required=""
              type="text"
              value=""
            />,
            <input
              className="form-control"
              name="password"
              onChange={[Function]}
              placeholder="Password"
              required=""
              type="password"
              value=""
            />,
            <button
              className="btn btn-lg btn-primary btn-block"
              type="submit"
            >
              Login
            </button>,
          ],
          "className": "form-signin",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Please login",
              "className": "form-signin-heading",
            },
            "ref": null,
            "rendered": "Please login",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autoFocus": "",
              "className": "form-control",
              "name": "email",
              "onChange": [Function],
              "placeholder": "Email Address",
              "required": "",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "form-control",
              "name": "password",
              "onChange": [Function],
              "placeholder": "Password",
              "required": "",
              "type": "password",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Login",
              "className": "btn btn-lg btn-primary btn-block",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Login",
            "type": "button",
          },
        ],
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing the Signup component should render banner text correctly with given strings 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Signup
    list={
      Array [
        "one",
        "two",
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form
        className="form-signin"
        onSubmit={[Function]}
      >
        <h2
          className="form-signin-heading"
        >
          Sign Up
        </h2>
        <input
          autofocus=""
          className="form-control"
          name="firstName"
          onChange={[Function]}
          placeholder="First Name"
          required=""
          type="text"
          value=""
        />
        <input
          autofocus=""
          className="form-control"
          name="lastName"
          onChange={[Function]}
          placeholder="Last Name"
          required=""
          type="text"
          value=""
        />
        <input
          autofocus=""
          className="form-control"
          name="email"
          onChange={[Function]}
          placeholder="Email Address"
          required=""
          type="text"
          value=""
        />
        <input
          className="form-control"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          required=""
          type="password"
          value=""
        />
        <button
          className="btn btn-lg btn-primary btn-block"
          type="submit"
        >
          Sign Up
        </button>
      </form>,
      "className": "wrapper",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="form-signin-heading"
          >
            Sign Up
          </h2>,
          <input
            autofocus=""
            className="form-control"
            name="firstName"
            onChange={[Function]}
            placeholder="First Name"
            required=""
            type="text"
            value=""
          />,
          <input
            autofocus=""
            className="form-control"
            name="lastName"
            onChange={[Function]}
            placeholder="Last Name"
            required=""
            type="text"
            value=""
          />,
          <input
            autofocus=""
            className="form-control"
            name="email"
            onChange={[Function]}
            placeholder="Email Address"
            required=""
            type="text"
            value=""
          />,
          <input
            className="form-control"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required=""
            type="password"
            value=""
          />,
          <button
            className="btn btn-lg btn-primary btn-block"
            type="submit"
          >
            Sign Up
          </button>,
        ],
        "className": "form-signin",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Sign Up",
            "className": "form-signin-heading",
          },
          "ref": null,
          "rendered": "Sign Up",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autofocus": "",
            "className": "form-control",
            "name": "firstName",
            "onChange": [Function],
            "placeholder": "First Name",
            "required": "",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autofocus": "",
            "className": "form-control",
            "name": "lastName",
            "onChange": [Function],
            "placeholder": "Last Name",
            "required": "",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autofocus": "",
            "className": "form-control",
            "name": "email",
            "onChange": [Function],
            "placeholder": "Email Address",
            "required": "",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "form-control",
            "name": "password",
            "onChange": [Function],
            "placeholder": "Password",
            "required": "",
            "type": "password",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Sign Up",
            "className": "btn btn-lg btn-primary btn-block",
            "type": "submit",
          },
          "ref": null,
          "rendered": "Sign Up",
          "type": "button",
        },
      ],
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form
          className="form-signin"
          onSubmit={[Function]}
        >
          <h2
            className="form-signin-heading"
          >
            Sign Up
          </h2>
          <input
            autofocus=""
            className="form-control"
            name="firstName"
            onChange={[Function]}
            placeholder="First Name"
            required=""
            type="text"
            value=""
          />
          <input
            autofocus=""
            className="form-control"
            name="lastName"
            onChange={[Function]}
            placeholder="Last Name"
            required=""
            type="text"
            value=""
          />
          <input
            autofocus=""
            className="form-control"
            name="email"
            onChange={[Function]}
            placeholder="Email Address"
            required=""
            type="text"
            value=""
          />
          <input
            className="form-control"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required=""
            type="password"
            value=""
          />
          <button
            className="btn btn-lg btn-primary btn-block"
            type="submit"
          >
            Sign Up
          </button>
        </form>,
        "className": "wrapper",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="form-signin-heading"
            >
              Sign Up
            </h2>,
            <input
              autofocus=""
              className="form-control"
              name="firstName"
              onChange={[Function]}
              placeholder="First Name"
              required=""
              type="text"
              value=""
            />,
            <input
              autofocus=""
              className="form-control"
              name="lastName"
              onChange={[Function]}
              placeholder="Last Name"
              required=""
              type="text"
              value=""
            />,
            <input
              autofocus=""
              className="form-control"
              name="email"
              onChange={[Function]}
              placeholder="Email Address"
              required=""
              type="text"
              value=""
            />,
            <input
              className="form-control"
              name="password"
              onChange={[Function]}
              placeholder="Password"
              required=""
              type="password"
              value=""
            />,
            <button
              className="btn btn-lg btn-primary btn-block"
              type="submit"
            >
              Sign Up
            </button>,
          ],
          "className": "form-signin",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Sign Up",
              "className": "form-signin-heading",
            },
            "ref": null,
            "rendered": "Sign Up",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autofocus": "",
              "className": "form-control",
              "name": "firstName",
              "onChange": [Function],
              "placeholder": "First Name",
              "required": "",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autofocus": "",
              "className": "form-control",
              "name": "lastName",
              "onChange": [Function],
              "placeholder": "Last Name",
              "required": "",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autofocus": "",
              "className": "form-control",
              "name": "email",
              "onChange": [Function],
              "placeholder": "Email Address",
              "required": "",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "form-control",
              "name": "password",
              "onChange": [Function],
              "placeholder": "Password",
              "required": "",
              "type": "password",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Sign Up",
              "className": "btn btn-lg btn-primary btn-block",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Sign Up",
            "type": "button",
          },
        ],
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing the Signup component should render correctly in "debug" mode 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Signup
    debug={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form
        className="form-signin"
        onSubmit={[Function]}
      >
        <h2
          className="form-signin-heading"
        >
          Sign Up
        </h2>
        <input
          autofocus=""
          className="form-control"
          name="firstName"
          onChange={[Function]}
          placeholder="First Name"
          required=""
          type="text"
          value=""
        />
        <input
          autofocus=""
          className="form-control"
          name="lastName"
          onChange={[Function]}
          placeholder="Last Name"
          required=""
          type="text"
          value=""
        />
        <input
          autofocus=""
          className="form-control"
          name="email"
          onChange={[Function]}
          placeholder="Email Address"
          required=""
          type="text"
          value=""
        />
        <input
          className="form-control"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          required=""
          type="password"
          value=""
        />
        <button
          className="btn btn-lg btn-primary btn-block"
          type="submit"
        >
          Sign Up
        </button>
      </form>,
      "className": "wrapper",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="form-signin-heading"
          >
            Sign Up
          </h2>,
          <input
            autofocus=""
            className="form-control"
            name="firstName"
            onChange={[Function]}
            placeholder="First Name"
            required=""
            type="text"
            value=""
          />,
          <input
            autofocus=""
            className="form-control"
            name="lastName"
            onChange={[Function]}
            placeholder="Last Name"
            required=""
            type="text"
            value=""
          />,
          <input
            autofocus=""
            className="form-control"
            name="email"
            onChange={[Function]}
            placeholder="Email Address"
            required=""
            type="text"
            value=""
          />,
          <input
            className="form-control"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required=""
            type="password"
            value=""
          />,
          <button
            className="btn btn-lg btn-primary btn-block"
            type="submit"
          >
            Sign Up
          </button>,
        ],
        "className": "form-signin",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Sign Up",
            "className": "form-signin-heading",
          },
          "ref": null,
          "rendered": "Sign Up",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autofocus": "",
            "className": "form-control",
            "name": "firstName",
            "onChange": [Function],
            "placeholder": "First Name",
            "required": "",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autofocus": "",
            "className": "form-control",
            "name": "lastName",
            "onChange": [Function],
            "placeholder": "Last Name",
            "required": "",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autofocus": "",
            "className": "form-control",
            "name": "email",
            "onChange": [Function],
            "placeholder": "Email Address",
            "required": "",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "form-control",
            "name": "password",
            "onChange": [Function],
            "placeholder": "Password",
            "required": "",
            "type": "password",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Sign Up",
            "className": "btn btn-lg btn-primary btn-block",
            "type": "submit",
          },
          "ref": null,
          "rendered": "Sign Up",
          "type": "button",
        },
      ],
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form
          className="form-signin"
          onSubmit={[Function]}
        >
          <h2
            className="form-signin-heading"
          >
            Sign Up
          </h2>
          <input
            autofocus=""
            className="form-control"
            name="firstName"
            onChange={[Function]}
            placeholder="First Name"
            required=""
            type="text"
            value=""
          />
          <input
            autofocus=""
            className="form-control"
            name="lastName"
            onChange={[Function]}
            placeholder="Last Name"
            required=""
            type="text"
            value=""
          />
          <input
            autofocus=""
            className="form-control"
            name="email"
            onChange={[Function]}
            placeholder="Email Address"
            required=""
            type="text"
            value=""
          />
          <input
            className="form-control"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required=""
            type="password"
            value=""
          />
          <button
            className="btn btn-lg btn-primary btn-block"
            type="submit"
          >
            Sign Up
          </button>
        </form>,
        "className": "wrapper",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="form-signin-heading"
            >
              Sign Up
            </h2>,
            <input
              autofocus=""
              className="form-control"
              name="firstName"
              onChange={[Function]}
              placeholder="First Name"
              required=""
              type="text"
              value=""
            />,
            <input
              autofocus=""
              className="form-control"
              name="lastName"
              onChange={[Function]}
              placeholder="Last Name"
              required=""
              type="text"
              value=""
            />,
            <input
              autofocus=""
              className="form-control"
              name="email"
              onChange={[Function]}
              placeholder="Email Address"
              required=""
              type="text"
              value=""
            />,
            <input
              className="form-control"
              name="password"
              onChange={[Function]}
              placeholder="Password"
              required=""
              type="password"
              value=""
            />,
            <button
              className="btn btn-lg btn-primary btn-block"
              type="submit"
            >
              Sign Up
            </button>,
          ],
          "className": "form-signin",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Sign Up",
              "className": "form-signin-heading",
            },
            "ref": null,
            "rendered": "Sign Up",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autofocus": "",
              "className": "form-control",
              "name": "firstName",
              "onChange": [Function],
              "placeholder": "First Name",
              "required": "",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autofocus": "",
              "className": "form-control",
              "name": "lastName",
              "onChange": [Function],
              "placeholder": "Last Name",
              "required": "",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autofocus": "",
              "className": "form-control",
              "name": "email",
              "onChange": [Function],
              "placeholder": "Email Address",
              "required": "",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "form-control",
              "name": "password",
              "onChange": [Function],
              "placeholder": "Password",
              "required": "",
              "type": "password",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Sign Up",
              "className": "btn btn-lg btn-primary btn-block",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Sign Up",
            "type": "button",
          },
        ],
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing the Signup component should render correctly with no props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Signup />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form
        className="form-signin"
        onSubmit={[Function]}
      >
        <h2
          className="form-signin-heading"
        >
          Sign Up
        </h2>
        <input
          autofocus=""
          className="form-control"
          name="firstName"
          onChange={[Function]}
          placeholder="First Name"
          required=""
          type="text"
          value=""
        />
        <input
          autofocus=""
          className="form-control"
          name="lastName"
          onChange={[Function]}
          placeholder="Last Name"
          required=""
          type="text"
          value=""
        />
        <input
          autofocus=""
          className="form-control"
          name="email"
          onChange={[Function]}
          placeholder="Email Address"
          required=""
          type="text"
          value=""
        />
        <input
          className="form-control"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          required=""
          type="password"
          value=""
        />
        <button
          className="btn btn-lg btn-primary btn-block"
          type="submit"
        >
          Sign Up
        </button>
      </form>,
      "className": "wrapper",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="form-signin-heading"
          >
            Sign Up
          </h2>,
          <input
            autofocus=""
            className="form-control"
            name="firstName"
            onChange={[Function]}
            placeholder="First Name"
            required=""
            type="text"
            value=""
          />,
          <input
            autofocus=""
            className="form-control"
            name="lastName"
            onChange={[Function]}
            placeholder="Last Name"
            required=""
            type="text"
            value=""
          />,
          <input
            autofocus=""
            className="form-control"
            name="email"
            onChange={[Function]}
            placeholder="Email Address"
            required=""
            type="text"
            value=""
          />,
          <input
            className="form-control"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required=""
            type="password"
            value=""
          />,
          <button
            className="btn btn-lg btn-primary btn-block"
            type="submit"
          >
            Sign Up
          </button>,
        ],
        "className": "form-signin",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Sign Up",
            "className": "form-signin-heading",
          },
          "ref": null,
          "rendered": "Sign Up",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autofocus": "",
            "className": "form-control",
            "name": "firstName",
            "onChange": [Function],
            "placeholder": "First Name",
            "required": "",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autofocus": "",
            "className": "form-control",
            "name": "lastName",
            "onChange": [Function],
            "placeholder": "Last Name",
            "required": "",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autofocus": "",
            "className": "form-control",
            "name": "email",
            "onChange": [Function],
            "placeholder": "Email Address",
            "required": "",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "form-control",
            "name": "password",
            "onChange": [Function],
            "placeholder": "Password",
            "required": "",
            "type": "password",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Sign Up",
            "className": "btn btn-lg btn-primary btn-block",
            "type": "submit",
          },
          "ref": null,
          "rendered": "Sign Up",
          "type": "button",
        },
      ],
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form
          className="form-signin"
          onSubmit={[Function]}
        >
          <h2
            className="form-signin-heading"
          >
            Sign Up
          </h2>
          <input
            autofocus=""
            className="form-control"
            name="firstName"
            onChange={[Function]}
            placeholder="First Name"
            required=""
            type="text"
            value=""
          />
          <input
            autofocus=""
            className="form-control"
            name="lastName"
            onChange={[Function]}
            placeholder="Last Name"
            required=""
            type="text"
            value=""
          />
          <input
            autofocus=""
            className="form-control"
            name="email"
            onChange={[Function]}
            placeholder="Email Address"
            required=""
            type="text"
            value=""
          />
          <input
            className="form-control"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required=""
            type="password"
            value=""
          />
          <button
            className="btn btn-lg btn-primary btn-block"
            type="submit"
          >
            Sign Up
          </button>
        </form>,
        "className": "wrapper",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="form-signin-heading"
            >
              Sign Up
            </h2>,
            <input
              autofocus=""
              className="form-control"
              name="firstName"
              onChange={[Function]}
              placeholder="First Name"
              required=""
              type="text"
              value=""
            />,
            <input
              autofocus=""
              className="form-control"
              name="lastName"
              onChange={[Function]}
              placeholder="Last Name"
              required=""
              type="text"
              value=""
            />,
            <input
              autofocus=""
              className="form-control"
              name="email"
              onChange={[Function]}
              placeholder="Email Address"
              required=""
              type="text"
              value=""
            />,
            <input
              className="form-control"
              name="password"
              onChange={[Function]}
              placeholder="Password"
              required=""
              type="password"
              value=""
            />,
            <button
              className="btn btn-lg btn-primary btn-block"
              type="submit"
            >
              Sign Up
            </button>,
          ],
          "className": "form-signin",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Sign Up",
              "className": "form-signin-heading",
            },
            "ref": null,
            "rendered": "Sign Up",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autofocus": "",
              "className": "form-control",
              "name": "firstName",
              "onChange": [Function],
              "placeholder": "First Name",
              "required": "",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autofocus": "",
              "className": "form-control",
              "name": "lastName",
              "onChange": [Function],
              "placeholder": "Last Name",
              "required": "",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autofocus": "",
              "className": "form-control",
              "name": "email",
              "onChange": [Function],
              "placeholder": "Email Address",
              "required": "",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "form-control",
              "name": "password",
              "onChange": [Function],
              "placeholder": "Password",
              "required": "",
              "type": "password",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Sign Up",
              "className": "btn btn-lg btn-primary btn-block",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Sign Up",
            "type": "button",
          },
        ],
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
